Add demo list to general documentation